manifest/bazooka168/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bazooka168
  namespace: bazooka168
spec:
  rules:
    - host: app.stromcash.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazooka168-app
                port:
                  number: 3000
  ingressClassName: nginx
